--- a/i18n/ar/docusaurus-plugin-content-docs/current/01.overview/15.try_yunohost.mdx
+++ b/i18n/ar/docusaurus-plugin-content-docs/current/01.overview/15.try_yunohost.mdx
@@ -40,5 +40,5 @@ This demo server could be down from time to time, but at least you can test and 
 </div>
 
 :::info
-**Demo server gracefully provided by [Gitoyen](https://www.gitoyen.net?target=_blank) <FAIcon icon="fa-heart" style={{color: "green"}}/>**
+**تم توفير الخادم التجريبي بفضل [Gitoyen](https://www.gitoyen.net?target=_blank) <FAIcon icon="fa-heart" style={{color: "green"}}/>**
 :::
